--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <p>Eager and proactive Information Technology graduate with a B.Tech. degree, seeking
           a challenging developer role in Python within a renowned organization. Dedicated to
           leveraging my technical proficiency and project management capabilities to foster innovation and delivertop-tier solutions.</p>
-        <a href="\Ganesh_CV.pdf" class="cta">Download Resume</a>
+        <a href="\folio\Ganesh_CV.pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
